# STIC

./: .gitignore  ECOv002_L2T_LSTE_34366_004_11SPS_20240728T204025_0712_01_EmisWB.tif  ECOv002_L2T_LSTE_34366_004_11SPS_20240728T204025_0712_01_LST.tif  README.md  makefile  pyproject.toml
STIC/: STIC.py  __init__.py  canopy_air_stream.py  closure.py  initialize_with_solar.py  initialize_without_solar.py  iterate_with_solar.py  iterate_without_solar.py  net_radiation.py  root_zone_initialization.py  root_zone_iteration.py  soil_moisture_initialization.py  soil_moisture_iteration.py
STIC/soil_heat_flux/: __init__.py  soil_heat_flux.py
STIC_JPL/: STIC_JPL.py  __init__.py  constants.py  initialize_with_solar.py  iterate_with_solar.py
tests/: test_import_PTJPL.py  test_import_STIC.py  test_import_dependencies.py
